* fixed some dark mode issues with footer * changed design for create build map selection

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -291,6 +291,20 @@ html, body {
 		margin-bottom: -20px;
 	}
 
+	&.mapSelection > li {
+		@include screen-sm-up {
+			flex: 0 0 50%;
+			margin-bottom: 20px;
+			max-width: 50%;
+		}
+
+		@include screen-lg {
+			flex: 0 0 25%;
+			margin-bottom: 20px;
+			max-width: 25%;
+		}
+	}
+
 	> li {
 		overflow: hidden;
 		padding-left: 10px;
@@ -415,5 +429,9 @@ html.dark {
 				background-color: #2E3338;
 			}
 		}
+	}
+
+	footer {
+		margin-bottom: 0;
 	}
 }
